# advent-of-code

./: .gitignore  Cargo.toml  README.md
2023/: .gitignore  Cargo.toml  Justfile
2023/data/test/: 08c.txt  12b.txt
2023/libs/aoc_test/: Cargo.toml
2023/libs/aoc_test/src/: lib.rs
2023/libs/bounds/: Cargo.toml
2023/libs/bounds/src/: lib.rs
2023/libs/grid/: Cargo.toml
2023/libs/grid/src/: lib.rs
2023/libs/point/src/: lib.rs
2023/solutions/: timing.csv
2023/solutions/_template/: Cargo.toml
2023/solutions/day01/: Cargo.toml
2023/solutions/day02/: Cargo.toml
2023/solutions/day02/src/: parse.rs  types.rs
2023/solutions/day03/: Cargo.toml
2023/solutions/day03/src/: types.rs
2023/solutions/day04/: Cargo.toml
2023/solutions/day04/src/: types.rs
2023/solutions/day05/: Cargo.toml
2023/solutions/day05/src/: parse.rs  types.rs
2023/solutions/day06/: Cargo.toml
2023/solutions/day06/src/: parse.rs
2023/solutions/day07/: Cargo.toml
2023/solutions/day07/src/: parse.rs
2023/solutions/day08/: Cargo.toml
2023/solutions/day08/src/: types.rs
2023/solutions/day09/: Cargo.toml
2023/solutions/day09/src/: parse.rs  types.rs
2023/solutions/day10/: Cargo.toml
2023/solutions/day10/src/: types.rs
2023/solutions/day11/: Cargo.toml
2023/solutions/day11/src/: types.rs
2023/solutions/day12/: Cargo.toml
2023/solutions/day12/src/: parse.rs  types.rs
2023/solutions/day13/: Cargo.toml
2023/solutions/day13/src/: types.rs
2023/solutions/day14/: Cargo.toml
2023/solutions/day14/src/: types.rs
2023/solutions/day15/: Cargo.toml
2023/solutions/day16/: Cargo.toml
2023/solutions/day16/src/: types.rs
2023/solutions/day17/: Cargo.toml
2023/solutions/day17/src/: types.rs
2023/solutions/day18/: Cargo.toml
2023/solutions/day18/src/: parse.rs  types.rs
2023/solutions/day19/: Cargo.toml
2023/solutions/day19/src/: parse.rs  types.rs
2023/solutions/day20/: Cargo.toml
2023/solutions/day20/src/: parse.rs  (+1 more)
2023/solutions/day21/: Cargo.toml
2023/solutions/day22/: Cargo.toml
2023/solutions/day23/: Cargo.toml
2023/solutions/day24/: Cargo.toml  output1.txt  output2.txt
2023/solutions/day25/: Cargo.toml
2023/src/: lib.rs
2024/: .gitignore  Cargo.toml  neighbors.py
2024/.config/: nextest.toml
2024/benches/: bench_codspeed.rs
2024/input/2024/: day22.txt
2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day21.rs.bak  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  direction.rs  grid.rs  lib.rs  main.rs  make_test.rs  point.rs  strgraph.rs  template.rs
2025/: Cargo.toml  Justfile
2025/aoc_macros/: Cargo.toml
2025/aoc_macros/src/: lib.rs  main_macro.rs  register.rs  register_render.rs  render.rs  render_frame.rs  render_image.rs  test.rs
2025/src/: grid.rs  lib.rs  line2d.rs  point2d.rs  point3d.rs  polygon.rs
(+225 files in other folders)
