[workspace]
resolver = "2"
members = [ 
    "libs/*",
    "solutions/*"
]

[workspace.dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
regex = "1.10.2"
rayon = "1.8.0"
itertools = "0.12.0"
fxhash = "0.2.1"
image = "0.24.7"
pathfinding = "4.6.0"
log = "0.4.20"
env_logger = "0.10.1"
petgraph = "0.6.4"
z3 = { version = "0.12", features = ["static-link-z3"] }