[workspace]

[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bitvec = "1.0.1"
hashbrown = "0.15.2"
hsv = "0.1.1"
image = "0.25.5"
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", default-features = false }
indoc = "2.0.5"
paste = "1.0.15"

[[bench]]
name = "bench_codspeed"
harness = false
