[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc = { path = "aoc_macros" }
ctor = "0.2"
clap = { version = "4", features = ["derive"] }
fancy-regex = "0.16.2"
num = "0.4.3"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
env_logger = "0.11.8"
image = { version = "0.25", default-features = false, features = ["png"] }