[package]
name = "day19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_test.path = "../../libs/aoc_test"
anyhow.workspace = true
nom.workspace = true
fxhash.workspace = true
log.workspace = true
env_logger.workspace = true
itertools.workspace = true